--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "lib-tester": {
+    "cron-editor-sample": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/lib-tester",
+            "outputPath": "dist/cron-editor-sample",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -58,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "lib-tester:build"
+            "browserTarget": "cron-editor-sample:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "lib-tester:build:production"
+              "browserTarget": "cron-editor-sample:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "lib-tester:build"
+            "browserTarget": "cron-editor-sample:build"
           }
         },
         "test": {
@@ -103,7 +103,7 @@
         }
       }
     },
-    "lib-tester-e2e": {
+    "cron-editor-sample-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -112,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "lib-tester:serve"
+            "devServerTarget": "cron-editor-sample:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "lib-tester:serve:production"
+              "devServerTarget": "cron-editor-sample:serve:production"
             }
           }
         },
@@ -132,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "lib-tester"
+  "defaultProject": "cron-editor-sample"
 }
